update-footer-info-diseño

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
     <footer>
         <section>
             <nav>
-                <a href="#">Nosotros</a>
+                <a href="#">Quienes Somos</a>
                 <a href="#">Productos</a>
-               <a href="#">Registro</a>
+               <a href="#">Registrate</a>
             </nav>
         </section>
         <section>
-            <a href="tel:5555544444">5555544444</a>
-            <a href="mailto:mail@gmail.com">mail@gmail.com</a>
+            <a href="tel:5555544444">5512345678</a>
+            <a href="mailto:mail@gmail.com">tienda@gmail.com</a>
         </section>            
     </footer>
 
