--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <main>
         <section class="banner">
-            <h2 class="banner__title">Productos Nuevos</h2>
-            <p class="banner__p">Conoce nuetros productos nuevos</p>
+            <h2 class="banner__title">Productos</h2>
+            <p class="banner__p">Conoce nuetra amplia gama de productos</p>
         </section>
 
         <section class="products">
